[package]
name = "r-uwp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputbot = "0.6.0"
sysinfo = "0.29.9"
windows = { version = "0.51.1", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
