[package]
name = "r-uwp"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = { version = "4.4.0", default-features = false , features = ["macros", "http2"] }
actix-web-actors = "4.2.0"
bytestring = "1.3.0"
clipboard-win = "4.5.0"
env_logger = { version = "0.10.0", default-features = false, features = ["auto-color"] }
inputbot = "0.6.0"
log = "0.4.20"
strum = { version = "0.25.0", features = ["derive"] }
sysinfo = "0.29.9"
windows = { version = "0.51.1", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
r-uwp-derive = { path = "../r-uwp-derive" }