[package]
name = "r-uwp"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = { version = "4.4", default-features = false , features = ["macros", "http2"] }
actix-web-actors = "4.2"
bytestring = "1.3"
clipboard-win = "4.5"
env_logger = { version = "0.10", default-features = false, features = ["auto-color"] }
inputbot = "0.6"
log = "0.4"
strum = { version = "0.25", features = ["derive"] }
sysinfo = "0.29.9"
winsafe = { version = "0.0.17", default-features = false, features = ["user"] }
r-uwp-derive = { path = "../r-uwp-derive" }
clap = { version = "4", features = ["derive"] }
